# PathTracing

./: .gitmodules  CMakeLists.txt  README.md  camera.cpp  camera.h  consol_reader.h  halton.cpp  halton.h  intersection.h  main.cpp  primes.h  ray.h  rndlb.cpp  rndlb.h  rng.h  run.py  sampler.cpp  sampler.h  sbprimes.h  triangle.cpp  triangle.h  utility.h
Results/Результаты Halton/Без скремблинга/: Report_halton_256.txt
Results/Результаты Sobol/Без скремблинга/: Report_sobol_256.txt
Results/Сравнение Flip/1spp/: STL1.txt
Results/Сравнение Flip/2spp/: HALTON2.txt  SOBOL2.txt  STL2.txt
Results/Сравнение Flip/4spp/: SOBOL4.txt
Results/Сравнение Flip/8spp/: HALTON8.txt
Results/Сравнение без скремблинга(Flip)/: Report_halton_256.txt  Report_sobol_256.txt  Report_stl_256.txt
Results/Сравнение(Flip)/: Plot.ipynb
Results/Сравнение(Flip)/DefaultInit/1spp/: HALTON1.txt  SOBOL1.txt
Results/Сравнение(Flip)/DefaultInit/4spp/: HALTON4.txt  STL4.txt
Results/Сравнение(Flip)/DefaultInit/8spp/: SOBOL8.txt  STL8.txt
Results/Сравнение(Flip)/Morton Hash 100x100/16spp/: HALTON16.txt  SOBOL16.txt
Results/Сравнение(Flip)/Vespa_1depth/: BN_MEANS.txt  HALTON_MEANS.txt  SOBOL_MEANS.txt  UNIFORM_MEANS.txt
Results/Сравнение(Flip)/Vespa_4depth/: BN_MEANS.txt  HALTON_MEANS.txt  SOBOL_MEANS.txt  UNIFORM_MEANS.txt
Results/Сравнение(SSIM)/: ssim.ipynb
Results/Сравнение(SSIM)/images1depth/: Uniform10000spp.png:Zone.Identifier
sampler/: halton.cpp  halton.h  sample_dimension.h  sampler.cpp  sampler.h  scramble.cpp  scramble.h  sobol.cpp  sobol.h
(+69 files in other folders)
